## Process this with automake to create Makefile.in

# These Java sources are not built or used when using configure+make, only
# when using Ant - but they still should go into the distribution tar file.
EXTRA_DIST = LineStripperSet.java LineCommenterSet.java XCopy.java \
 Kawac.java
CLEANFILES = $(top_builddir)/tools/$(subdir)/*.class

all:
